--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "port": 8010
   },
   "scripts": {
+    "build-npm": "gulp build-npm",
     "build": "rc-tools run build",
     "less": "rc-tools run less",
     "gh-pages": "rc-tools run gh-pages",
@@ -46,12 +47,16 @@
     "expect.js": "~0.3.1",
     "gregorian-calendar": "3.x",
     "gregorian-calendar-format": "^2.1.1",
+    "gulp": "^3.8.11",
+    "gulp-es6-transpiler": "^1.0.1",
+    "gulp-reactify": "^2.0.0",
     "object-assign": "~2.0.0",
     "precommit-hook": "^1.0.7",
     "rc-calendar": "3.x",
     "rc-server": "^2.0.0",
     "rc-tools": "2.x",
-    "react": "~0.13.0"
+    "react": "~0.13.0",
+    "react-tools": "^0.13.1"
   },
   "precommit": [
     "lint",
